src/objects/OpportunitySplit.object
<CustomObject>
    <fields>
        <fullName>OpportunitySplitId__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Split ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaidAmount__c</fullName>
        <description>The commission amount paid for the given split.</description>
        <label>Paid Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaidOn__c</fullName>
        <description>The date which the given commission was paid to the team member.</description>
        <label>Paid On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SplitOwnerEmployeeNumber__c</fullName>
        <description>This field is being used on a Commission Report. Please do not delete without contacting Bogumil or Matt first.</description>
        <formula>SplitOwner.EmployeeNumber</formula>
        <label>Split Owner Employee Number</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>